--- a/src/lab/images/simulation/fp/index.html
+++ b/src/lab/images/simulation/fp/index.html
@@ -93,7 +93,7 @@ var m20=[[21.0,21.5,22.0,22.5,23.0,23.5,24.0,24.5],
 <h4 class="incanvas" style="font-family:verdana;" >Objective</h4>
 <p class="incanvas" style="font-family:verdana; font-size:14px;">To determine the friction in pipes.</p>
 <h4 class="incanvas" style="font-family:verdana;">Apparatus used:</h4>
-<p class="incanvas" style="font-family:verdana; font-size:14px;" >Pipes having different diameter connected to a differential manometer, a collecting tank, stopwatch, scale</p>
+<p class="incanvas" style="font-family:verdana; font-size:14px;" >Pipes having different diameter connected to a differential manometer, a collecting tank, stopwatch, scale.</p>
 <img id="" style="position: absolute; left: 55px; top: 96px;" src="images/1.png"/>
 
 </div>
@@ -327,7 +327,7 @@ Select the Pipe of required diameter:
 <div class="tooltip" style="position:absolute;left: 220px; top: 360px;">
     <p id="75" style="font-family:verdana;font-size:14px;"></p>
     <!-- <span class="tooltiptext">v (cm/sec) = Q<sub>act</sub> / A</span> -->
-    <span class="tooltiptext">v (cm/sec)= <span class="frac"><sup>Q<sub>act</sub></sup><span>&frasl;</span><sub>A</sub></span></span>
+    <span class="tooltiptext">v (cm/sec)= <span class="frac"><sup>Q<sub>act</sub></sup><span>&frasl;</span><sub><sup>&pi; *d<sup>2</sup></sup></sup><span>&frasl;</span><sub>4</sub></span></sub></span></span>
 </div>
 <div class="tooltip" style="position:absolute;left: 220px; top: 400px;">
     <p id="76" style="font-family:verdana;font-size:14px;"></p>
@@ -367,6 +367,6 @@ Select the Pipe of required diameter:
 <p class ="close2" id="close5" style="position:absolute;visibility:hidden;font-family:verdana; font-size:14px;left: 105px; top:480px; height: 30px; z-index: 10;">CLOSED</p>
 
 
-<div id="copyright"> &copy; 2016-2020 SOLVE - The Virtual Lab @ NITK Surathkal, Department of Applied Mechanics & Hydraulics</div>
+<div id="copyright"> &copy; 2016 - 2020 SOLVE - The Virtual Lab @ NITK Surathkal, Department of Applied Mechanics & Hydraulics</div>
 </body>
 </html>
