--- a/src/lab/images/simulation/rectangular_notch/index.html
+++ b/src/lab/images/simulation/rectangular_notch/index.html
@@ -4,11 +4,11 @@
 <meta charset="UTF-8">
 
 <title>SOLVE</title>
-<link rel="stylesheet" href="rvnotch.css" />
+<link rel="stylesheet" href="css/rvnotch.css" />
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script> 
-<script type="text/javascript" src= "jquery-1.7.1.min.js"></script>
-<script type="text/javascript" src= "rvnotch.js"></script>
-<link href="mathstyle.css" rel="stylesheet" />
+<script type="text/javascript" src= "js/jquery-1.7.1.min.js"></script>
+<script type="text/javascript" src= "js/rvnotch.js"></script>
+<link rel="stylesheet" href="css/mathstyle.css" />
 
 <script>
 var simsubscreennum=0;
@@ -20,14 +20,15 @@ var values=[[4.6,13.36,8.76,5.87,17.45,11.58,13.348,6466.08,10219.52,0.6327],
 			[4.6,10.34,5.74,5.87,14.83,8.96,13.952,3405.18,5665.82,0.601],
 			[4.6,9.16,4.56,5.87,13.64,7.77,14.188,2384.64,4079.69,0.5845],
 			[4.6,8.49,3.89,5.87,12.99,7.12,14.322,1916.77,3244.79,0.5907],
-			[4.6,7.85,3.25,5.87,12.17,6.3,14.45,1411.63,2500.06,0.5646],]
+			[4.6,7.85,3.25,5.87,12.17,6.3,14.45,1411.63,2500.06,0.5646]];
 
 </script>
 </head>
 
 
 
-<body  onload="select.reset();" style="margin:0;">
+<!-- <body  onload="select.reset();" style="margin:0;"> -->
+<body style="margin:0;">
 <!--Simulation Screen start		-->
 <div id="simscreen">
 
