--- a/src/lab/images/simulation/venturi/index.html
+++ b/src/lab/images/simulation/venturi/index.html
@@ -38,7 +38,7 @@ var mano40=[[43.1,42.1,41.1,40.1,39.1,38.1,37.1],
           	[11.76,12.4,13.3,14.1,14.5,16,17.8],
          	[2869.9,2721.77,2537.59,2393.62,2327.59,2109.38,1896.07],
 			[3233.653554,3060.603693,2877.164337,2681.203886,2469.743697,2238.39531,1980.200303],
-			[0.89,0.89,0.88,0.89,0.94,0.94,0.96]]
+			[0.89,0.89,0.88,0.89,0.94,0.94,0.96]];
 		  
 		  
 var mano20=[[55.2,53,50.8,48.6,46.4,44.2,42],
@@ -48,7 +48,7 @@ var mano20=[[55.2,53,50.8,48.6,46.4,44.2,42],
           [20,23,25,26,34,49,87],
           [1687.5,1467.39,1350,1298.08,992.65,688.78,387.93],
           [1861.134704,1672.386086,1459.427303,1336.299838,1057.709832,747.9137945,463.836445],
-          [0.91,0.88,0.93,0.97,0.94,0.92,0.84]]
+          [0.91,0.88,0.93,0.97,0.94,0.92,0.84]];
 
 
 </script>
@@ -345,6 +345,6 @@ Select the Pipe of required diameter:
 
 
 
-<div id="copyright"> &copy; 2016-2020 SOLVE - The Virtual Lab @ NITK Surathkal, Department of Applied Mechanics & Hydraulics</div>
+<div id="copyright"> &copy; 2016 - 2020 SOLVE - The Virtual Lab @ NITK Surathkal, Department of Applied Mechanics & Hydraulics</div>
 </body>
 </html>
