--- a/src/lab/images/simulation/vnotch/index.html
+++ b/src/lab/images/simulation/vnotch/index.html
@@ -4,13 +4,13 @@
 <meta charset="UTF-8">
 
 <title>SOLVE</title>
-<link rel="stylesheet" href="vnotch.css" />
-<link href="mathstyle.css" rel="stylesheet" />
+<link rel="stylesheet" href="css/vnotch.css" />
+<link rel="stylesheet" href="css/mathstyle.css" />
 <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>-->
-<script type="text/javascript" src= "jquery-1.7.1.min.js"></script>
-<script type="text/javascript" src= "vnotch.js"></script>
-<script type="text/javascript" src= "jquery-2.1.4.js"></script>
-<script type="text/javascript" src= "ej.web.all.js"></script>
+<script type="text/javascript" src= "js/jquery-1.7.1.min.js"></script>
+<script type="text/javascript" src= "js/vnotch.js"></script>
+<script type="text/javascript" src= "js/jquery-2.1.4.js"></script>
+<script type="text/javascript" src= "js/ej.web.all.js"></script>
 
 <script>
 var simsubscreennum=0;
