--- a/src/lab/images/simulation/impact of jet_final/index.html
+++ b/src/lab/images/simulation/impact of jet_final/index.html
@@ -4,13 +4,13 @@
 <meta charset="UTF-8">
 
 <title>SOLVE</title>
-<link rel="stylesheet" href="sgca.css" />
-<link href="mathstyle.css" rel="stylesheet" />
+<link rel="stylesheet" href="css/sgca.css" />
+<link rel="stylesheet" href="css/mathstyle.css"/>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script> 
-<script type="text/javascript" src= "jquery-1.7.1.min.js"></script>
-<script type="text/javascript" src= "sgca.js"></script>
-<script type="text/javascript" src= "jquery-2.1.4.js"></script>
-<script type="text/javascript" src= "ej.web.all.js"></script>
+<script type="text/javascript" src= "js/jquery-1.7.1.min.js"></script>
+<script type="text/javascript" src= "js/sgca.js"></script>
+<script type="text/javascript" src= "js/jquery-2.1.4.js"></script>
+<script type="text/javascript" src= "js/ej.web.all.js"></script>
 
 <script>
 var simsubscreennum=0;
@@ -18,27 +18,29 @@ var simsubscreennum=0;
 <!-- var hemi=[50,100,150]; -->
 <!-- var inclined=[10,15,20]; -->
 
-var flat=[[25,50,75],
-          [45,31,25],
-		  [418.6,580.65,720],
-		  [3.41,4.73,5.86],
-		  [1.428,2.472,4.225],
-		  [1.178,2.356,3.584],
-		  [0.825,0.857,0.836]];			
 var hemi=[[50,100,150],
           [41,32,26],
 		  [439.02,562.5,692.31],
-		  [3.51,4.54,5.64],
-		  [3.182,5.158,7.812],
-		  [2.336,4.712,7.067],
-		  [0.749,0.9135,0.9103]];
+		  [3.58,4.58,5.64],
+		  [3.143,5.159,7.815],
+		  [2.289,4.578,3.867],
+		  [0.728,0.887,0.879]];
+		  
+var flat=[[25,50,75],
+          [43,31,25],
+		  [418.6,580.65,720],
+		  [3.41,4.73,5.87],
+		  [1.429,2.479,4.226],
+		  [1.145,2.289,3.434],
+		  [0.801,0.833,0.812]];			
+
 var inclined=[[10,15,20],
               [61,50,43],
 			  [295.08,360,418.60],
 			  [2.41,2.93,3.41],
-			  [0.644,0.958,1.291],
-			  [0.411,0.703,1.011],
-			  [0.638,0.733,0.780]];
+			  [1.689,2.514,3.399],
+			  [0.458,0.687,0.916],
+			  [0.271,0.273,0.269]];
 
 </script>
 </head>
@@ -132,8 +134,8 @@ var inclined=[[10,15,20],
 <img id="can3-5" style="position: absolute; left:-50px; top: 95px;   visibility:hidden;" src="images/scale2.png"/>
 <img id="can3-7" style="position: absolute; left:195px; top: 78px; visibility:hidden;" src="images/sa.png"/>
 <img id="can3-8" style="position: absolute; left:78px; top: 52px; visibility:hidden;" src="images/ba.png"/>
-<p id="v3-1" style="position:absolute; left: 470px; top:200px; visibility:hidden; font-family:verdana; font-size:14px;">a = 1.25cm</p>
-<p id="v3-2" style="position:absolute; left: 470px; top:250px; visibility:hidden; font-family:verdana; font-size:14px;">b = 13cm </p>
+<p id="v3-1" style="position:absolute; left: 470px; top:200px; visibility:hidden; font-family:verdana; font-size:14px;">a = 13.55cm</p>
+<p id="v3-2" style="position:absolute; left: 470px; top:250px; visibility:hidden; font-family:verdana; font-size:14px;">b = 63cm </p>
 </div>
 
  
@@ -270,8 +272,8 @@ var inclined=[[10,15,20],
 <p>Breadth of channel = 60cm</p>
 <p>Area of collecting tank = 3600cm<sup>2</sup></p><!-- 60 x 40 -->
 
-<p>Diameter of nozzle, d = 12.5 cm</p>
-<span class="tooltip">Area of the nozzle, A = 122.66cm<sup>2</sup>
+<p>Diameter of nozzle, d = 1.25 cm</p>
+<span class="tooltip">Area of the nozzle, A = 1.2266cm<sup>2</sup>
 	<span id="fcan4-11" class="tooltiptext" ><span>A = <span class="frac"><sup>&pi; &times; d<sup>2</sup></sup><span>&frasl;</span><sub>4</sub></span> </span></span>
 </span>
 
@@ -279,8 +281,8 @@ var inclined=[[10,15,20],
 
 <p>Density of water, &rho; = 1g/cm<sup>3</sup></p>
 
-<p>Distance a = 1.25cm</p>
-<p>Distance b = 13cm</p>
+<p>Distance a = 13.5cm</p>
+<p>Distance b = 63cm</p>
 <p id="v7-2">Wieght on the pan, W = </p>
 
 </span>
