--- a/src/lab/images/simulation/vnotch/index.html
+++ b/src/lab/images/simulation/vnotch/index.html
@@ -52,8 +52,8 @@ var values=[[3.15,10.04,6.89,2943.7,10,20,1750,0.59,2.53,14,0.593],
 <span class="circlebg" id="stepnumber">&nbsp;2&nbsp;</span>
 <p id="pumptext-2" class="steptext">&nbsp;Open the inlet valve and allow the water to fill in the channel till crest level.</p>
 <img id="can2-1" style="position: absolute; left: 50px; top: 130px;" src="Images/vnotch2.png">
-<img id="can2-2" style="position: absolute; left: 550px; top: 130px;" src="Images/Inlet valve_horizontal_1.png">
-<img id="can2-3" style="position: absolute; left: 545px; top: 167px;" src="Images/Inlet valve_horizontal.png">
+<img id="can2-2" style="position: absolute; left: 550px; top: 130px;" src="Images/inlet_valve_horizontal_1.png">
+<img id="can2-3" style="position: absolute; left: 545px; top: 167px;" src="Images/inlet_valve_horizontal.png">
 <img id="can2-4" style="position: absolute; left: 85px; top: 155px;cursor:zoom-in;" src="Images/nob2.png"/>
 </div>
 
@@ -115,8 +115,8 @@ var values=[[3.15,10.04,6.89,2943.7,10,20,1750,0.59,2.53,14,0.593],
 	
 <div class="simsubscreen" id="canvas6" style="visibility:hidden">
 <center><h2>Characteristic Curves<h2></center></p>
-<center><span id="step7text1" style="border: 2px solid; position:absolute;top: 60px; left:250px;cursor:pointer;">
-&nbsp;&nbsp; Theoretical Flow Rate vs Head &nbsp;&nbsp;</span></center>
+<center><span id="step7text1" style="border: 2px solid; position:absolute; top: 60px; left:215px; cursor:pointer; padding:2.5px;">
+&nbsp;&nbsp; Actual Flow Rate (cm<sup>3</sup>/sec) vs Head (m) &nbsp;&nbsp;</span></center>
 
 <div id="chartContainer" style="height: 420px; width: 600px;margin-left:40px;margin-right:100px;margin-top:50px"></div>
 </div>
@@ -133,7 +133,7 @@ var values=[[3.15,10.04,6.89,2943.7,10,20,1750,0.59,2.53,14,0.593],
 </div>
 	
 <div id="nav">
-	<img id="nextButton" onclick="navNext(); " src="Images/Next.png" />
+	<img id="nextButton" onclick="navNext(); " src="Images/next.png" />
 </div>
 
 <img class ="" id="arrow1" style="visibility:hidden" src="Images/arrow1.png"/>
