--- a/src/lab/images/simulation/vnotch/index.html
+++ b/src/lab/images/simulation/vnotch/index.html
@@ -133,7 +133,7 @@ var values=[[3.15,10.04,6.89,2943.7,10,20,1750,0.59,2.53,14,0.593],
 </div>
 	
 <div id="nav">
-	<img id="nextButton" onclick="navNext(); " src="Images/next.png" />
+	<img id="nextButton" onclick="navNext(); " title="Next" src="Images/next_button.png" />
 </div>
 
 <img class ="" id="arrow1" style="visibility:hidden" src="Images/arrow1.png"/>
