--- a/src/lab/exp3/content.html
+++ b/src/lab/exp3/content.html
@@ -452,13 +452,16 @@ text-decoration: none;" href="index1.html">Get Started</a>
                         Videos
                     </div>
 
-                    <!--<div class="content" id="experiment-article-section-7-content">
-                        <div class="divContent">
-                         NPTEL:<br>
-                             <a href="https://www.youtube.com/watch?v=bX_m53Xexvk&list=PLAC668A0566953FB5">Mechanical Vibrations</a>
-<br>
-                        </div>
-                    </div>-->
+<div class="content" id="experiment-article-section-7-content" >
+	<div class="divContent">
+		<h2>Simulation demo :</h2><br>
+		<div style="text-align:center;"><iframe width="800" height="500" src="https://www.youtube.com/embed/HBiavnFcZaI"></iframe></div>
+	<br><br>
+	<h2>Experimental demo :</h2><br>
+	<div style="text-align:center;"><iframe width="800" height="500" src="https://www.youtube.com/embed/4zT3zXXVPOU"></iframe></div>  
+		<br><br><br><br>
+	</div>
+</div>
                 </section>
 
            <section id="experiment-article-section-6">
